--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Manuel Molina Ramirez <manuel.molina.ramirez1991@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
