--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
-    "sequelize": "^6.28.1"
+    "sequelize": "^6.28.1",
+    "sequelize-cli": "^6.6.0"
   },
   "scripts": {
     "start": "nodemon index.js"
