--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "express": "^4.18.2",
     "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "sequelize": "^6.28.1",
     "sequelize-cli": "^6.6.0"
   },
   "scripts": {
     "start": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
