--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "BackendPostgresRickAndMorty",
+  "name": "proyectoNode",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/manuelmolina91/BackendPostgresRickAndMorty.git",
-  "author": "Manuel Molina Ramirez <manuel.molina.ramirez1991@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fetch": "^1.1.0",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.9.0",
-    "sequelize": "^6.28.1",
+    "mongodb": "^4.13.0",
+    "mysql2": "^3.0.1",
+    "pg": "^8.8.0",
+    "sequelize": "^6.28.0",
     "sequelize-cli": "^6.6.0"
   },
   "scripts": {
     "start": "nodemon index.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.21"
   }
 }
