--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "proyectoNode",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "fetch": "^1.1.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.13.0",
-    "mysql2": "^3.0.1",
-    "pg": "^8.8.0",
-    "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.6.0"
-  },
-  "scripts": {
-    "start": "nodemon index.js"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.21"
-  }
+    "name": "rickandmorty_backend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "https://github.com/moyazo/BACKEND-NODE-POSTGRES-RICKANDMORTY.git",
+    "author": "Manuel Moya <manuel.moyavadillo2@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "start": "yarn prettier --write && sequelize-cli db:migrate && nodemon index.js  .",
+        "startdb": "docker-compose up",
+        "stopdb": "docker compose down",
+        "prettier": "prettier --write ."
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "docker": "^1.0.0",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "faker": "^6.6.6",
+        "jsonwebtoken": "^9.0.0",
+        "nodemon": "^2.0.20",
+        "path": "^0.12.7",
+        "pg": "^8.9.0",
+        "prettier": "^2.8.4",
+        "sequelize": "^6.29.0",
+        "sequelize-cli": "^6.6.0",
+        "uuid": "^9.0.0"
+    },
+    "engines": {
+        "node": "18.13.0"
+    }
 }
